--- a/Volleidge Oplossing.ipynb
+++ b/Volleidge Oplossing.ipynb
@@ -195,6 +195,7 @@
     "    print(heads_dic[counts[i]],sol[i],end = '; ')\n",
     "print()\n",
     "print('Totaal aantal cadeaus:',sum(sol))\n",
+    "print('Totaal aantal onderdelen:',sum([counts[i]*sol[i] for i in range(len(sol))]))\n",
     "\n",
     "sol_arr = []\n",
     "for i in range(len(sol)):\n",
