--- a/Volleidge Oplossing.ipynb
+++ b/Volleidge Oplossing.ipynb
@@ -171,6 +171,7 @@
       "Oplossing:\n",
       "B 2; Q 3; E 3; H 3; D 2; L 1; P 3; T 3; \n",
       "Totaal aantal cadeaus: 20\n",
+      "Totaal aantal onderdelen: 1458849\n",
       "Oplossing string: BBDDEEEHHHLPPPQQQTTT\n"
      ]
     }
