--- a/Volleidge Oplossing.ipynb
+++ b/Volleidge Oplossing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7d46992",
+   "id": "f17f79dc",
    "metadata": {},
    "source": [
     "# Deel 1\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "680b27f1",
+   "id": "a999020d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c0d034",
+   "id": "deedfc41",
    "metadata": {},
    "source": [
     "Met deze code hebben we de lijst geladen als een geneste \"Python-dictionary\". De \"minilijst\" levert op bijvoorbeeld het dictionary \n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98ec76ea",
+   "id": "53012560",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8093102e",
+   "id": "d7f4b7a1",
    "metadata": {},
    "source": [
     "# Deel 2\n",
@@ -128,21 +128,34 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a7a858b",
+   "id": "0eb8d7df",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "'TOP' ITEMS:\n",
+      "Lightsaber\n",
+      "HandheldComputer\n",
+      "ElectrischeRacebaan\n",
+      "QuadDrone\n",
+      "PikachuPlushy\n",
+      "Trampoline\n",
+      "BatmobileReplica\n",
+      "DanceDanceRevolutionMat\n",
+      "\n",
       "[293867, 260702, 12649, 11082, 6457, 1614, 737, 359]\n",
       "{1614: 'L', 11082: 'H', 12649: 'E', 260702: 'Q', 737: 'P', 359: 'T', 293867: 'B', 6457: 'D'}\n"
      ]
     }
    ],
    "source": [
-    "heads_dic = {counts_dic[key]:key[0] for key in filter(lambda x: top_dic[x], comps_dic)}\n",
-    "counts = [counts_dic[key] for key in filter(lambda x: top_dic[x], comps_dic)]\n",
+    "tops = list(filter(lambda x: top_dic[x], comps_dic))\n",
+    "print(\"\\'TOP\\' ITEMS:\",*tops,sep = '\\n')\n",
+    "print()\n",
+    "heads_dic = {counts_dic[key]:key[0] for key in tops}\n",
+    "counts = [counts_dic[key] for key in tops]\n",
     "counts.sort(reverse = True)\n",
     "print(counts) # Lijst van de \"top\" artikelbedragen, in aflopende volgorde \n",
     "print(heads_dic) # Lijst met de eerste letters die bij elk bedrag horen "
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5d697b",
+   "id": "6149b7e6",
    "metadata": {},
    "source": [
     "Nadat we het bedrag voor elk \"top\" item hebben gekregen, lossen we de puzzel op met behulp van de `get_wgts`-functie die hieronder is gedefinieerd. De functie begint met het nemen van zoveel mogelijk van het eerste item (het item met de meeste onderdelen) en zoekt in een recursieve aanroep naar een verzameling met de resterende items die het resterende aantal items (van de in totaal 20 vereist) en het resterende aantal onderdelen. Als er geen oplossing wordt gevonden, wordt het bedrag van het eerste item verlaagd en wordt het opnieuw geprobeerd.\n",
@@ -160,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "970d4d19",
+   "execution_count": 4,
+   "id": "04113a82",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +195,7 @@
     "    # retourneert: vlag voor of er een oplossing bestaat en een lijst met bedragen voor elk item\n",
     "    \n",
     "    if not arr:                            #equivalent - if arr == []:\n",
-    "        return (tot==0 and wgtsum==0),[]\n",
+    "        return (tot==0 and wgtsum == 0),[]\n",
     "    exists = False\n",
     "    for w in range(min(1+wgtsum,1+tot//arr[0]))[::-1]:\n",
     "        exists,sol = get_wgts(arr[1:],tot-w*arr[0],wgtsum-w)\n",
