--- a/Volleidge Oplossing.ipynb
+++ b/Volleidge Oplossing.ipynb
@@ -90,7 +90,7 @@
     "def get_counts(key):\n",
     "    global comps_dic\n",
     "    global counts_dic\n",
-    "    if not counts_dic[key]: #equivalent - if key2 in comps_dic != 0:\n",
+    "    if not counts_dic[key]: #equivalent - if counts_dic[key]!=0:\n",
     "        count = 0\n",
     "        for key2 in comps_dic[key]:\n",
     "            k_count = comps_dic[key][key2]\n",
